# connectome_interpreter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-types.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
connectome_interpreter/: __init__.py  _version.py  activation_maximisation.py  compress_paths.py  external_map.py  external_paths.py  path_finding.py  utils.py
connectome_interpreter/data/Badel2016/: Badel2016.csv  Badel_et_al_2016_raw.xls
connectome_interpreter/data/DoOR/: door_chemical_meta.csv  door_response_matrix.csv  processed_door_adult.csv  processed_door_adult_sfr_subtracted.csv
connectome_interpreter/data/Dweck2018/: 1-s2.0-S2211124718306636-mmc2.xlsx  1-s2.0-S2211124718306636-mmc3.xlsx  1-s2.0-S2211124718306636-mmc4.xlsx  adult_chem2glom.csv  adult_fruit2glom.csv  larva_chem2or.csv  larva_fruit2or.csv
connectome_interpreter/data/Hallem_Carlson_2006/: Hallem_Carlson_2006_S1.csv  Hallem_Carlson_2006_S2.csv  Hallem_Carlson_2006_S3.csv  odour_dilution_response_s2_tidy.csv  odour_response_s1_tidy.csv  odour_time_response_s3_tidy.csv
connectome_interpreter/data/Knaden2012/: Knaden2012_odour_valence.csv
connectome_interpreter/data/Matsliah2024/: fafb_right_vis_cols.csv
connectome_interpreter/data/Nern2024/: ME-column-coords.csv  ME-columnar-cells-hex-location.csv
connectome_interpreter/data/Zhao2024/: ucl_hex_right_20240701_tomale.csv
data/uCT_data/: ucl_hex_right_20240701_tomale.csv
docs/: conf.py  index.rst  requirements.txt  your_own_data.rst
docs/modules/: activation_maximisation.rst  compress_paths.rst  external_map.rst  external_paths.rst  path_finding.rst  toc.rst  utils.rst
docs/tutorials/: act_max.rst  ei_matmul.rst  matmul.rst  path_finding.rst  saliency.rst  simple_model.rst  toc.rst
tests/: hex_plot_test.ipynb  test_act_max.py  test_compress_paths.py  test_path_finding.py  test_utils.py
